# balance_helper

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  app_defaults.py  docker-compose.yml  pyproject.toml  requirements.txt  yandex_api.py
docs/: FUNDRAISING_DOMAIN.md  QUALITY.md  ROADMAP.md  TESTING.md  UI_STRATEGY.md  USAGE.md  agent-progress.md  feature-list.json
docs/exec-plans/active/: global-roadmap-autonomous-development.md  mvp-platform-applications-agent.md
scripts/: dev_check.py  smoke_operator_workflow.py  smoke_web_render.py  yandex_llm_example.py
src/balance_fundraising/: __init__.py  app_defaults.py  cli.py  yandex_api.py
src/balance_fundraising/adapters/: __init__.py  fastapi_app.py  google_sheets_store.py  local_json_store.py  store.py  store_factory.py  telegram_bot.py  web.py  web_static.py  web_templates.py
src/balance_fundraising/clients/: page_fetcher.py  yandex_llm.py  yandex_search.py
src/balance_fundraising/domain/: __init__.py  models.py
src/balance_fundraising/extractors/: __init__.py  structured.py  text.py
src/balance_fundraising/services/: __init__.py  analysis.py  applications.py  b2b.py  bloggers.py  checklist.py  demo.py  draft.py  (+11 more)
tests/: test_analysis.py  test_docker_artifacts.py  test_examples_and_adapters.py  test_fastapi_logging.py  test_harness_docs.py  test_integration_local.py  test_operator_smoke.py  test_services.py  test_store_factory_and_doctor.py  test_structured_extractor.py  test_web_ui.py  test_yandex_api.py  test_yandex_search.py
tests/fixtures/: sbervmeste.html  vk_dobro.html
(+1 files in other folders)
